<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/android_color"
    tools:context=".MainActivity">

    <!-- Username -->
    <EditText
        android:id="@+id/usernameEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:hint="@string/username_hint_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Email -->
    <EditText
        android:id="@+id/emailEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:hint="@string/email_hint_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usernameEditTextRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextRegister"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Password -->
    <EditText
        android:id="@+id/passwordEditTextRegister"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:background="@color/white"
        android:hint="@string/password_hint_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailEditTextRegister"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextRegister"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Button -->
    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditTextRegister"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/passwordEditTextRegister"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextRegister" />

    <TextView
        android:id="@+id/alreadyHaveAccountRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/already_accont_link"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>